--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>jpa-basic</groupId>
     <artifactId>ex1-hello-jpa</artifactId>
     <version>1.0.0</version>
+
     <dependencies>
         <!-- JPA 하이버네이트 -->
         <dependency>
@@ -18,6 +19,7 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.199</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
